feat(hw-2): add inital templates

--- a/hw-2/mthe-474-hw-2-q-2.tex
+++ b/hw-2/mthe-474-hw-2-q-2.tex
@@ -22,9 +22,11 @@
   \begin{questions}
     \setcounter{question}{\questionnumber}
     \addtocounter{question}{-1}
-    \question{}
+    \question[10]{}
     \begin{solution}
-      42.
+      \begin{proof}
+        42.
+      \end{proof}
     \end{solution}
   \end{questions}
 \end{document}
