--- a/hw-2/mthe-474-hw-2-q-3.tex
+++ b/hw-2/mthe-474-hw-2-q-3.tex
@@ -22,9 +22,24 @@
   \begin{questions}
     \setcounter{question}{\questionnumber}
     \addtocounter{question}{-1}
-    \question{}
-    \begin{solution}
-      42.
-    \end{solution}
+    \question[15]\
+    \begin{parts}
+      \part{}
+      \begin{solution}
+        42.
+      \end{solution}
+
+      \part{}
+      \begin{solution}
+        42.
+      \end{solution}
+
+      \part{}
+      \begin{solution}
+        \begin{proof}
+          42.
+        \end{proof}
+      \end{solution}
+    \end{parts}
   \end{questions}
 \end{document}
