--- a/hw-2/mthe-474-hw-2-q-6.tex
+++ b/hw-2/mthe-474-hw-2-q-6.tex
@@ -18,13 +18,32 @@
 
 \usepackage{bch-style}
 
+\renewcommand{\thepartno}{\roman{partno}}
+\renewcommand{\thesubpart}{\alph{subpart}}
+\renewcommand{\subpartlabel}{(\thesubpart)}
+
 \begin{document}
   \begin{questions}
     \setcounter{question}{\questionnumber}
     \addtocounter{question}{-1}
-    \question{}
-    \begin{solution}
-      42.
-    \end{solution}
+    \question[20]\
+    \begin{parts}
+      \part\
+      \begin{subparts}
+        \subpart{}
+        \begin{solution}
+          \begin{proof}
+            42.
+          \end{proof}
+        \end{solution}
+
+        \subpart{}
+        \begin{solution}
+          \begin{proof}
+            42.
+          \end{proof}
+        \end{solution}
+      \end{subparts}
+    \end{parts}
   \end{questions}
 \end{document}
