chore(template): add points 0 to file

--- a/mthe-474-hw-0-q-0.tex
+++ b/mthe-474-hw-0-q-0.tex
@@ -22,7 +22,7 @@
   \begin{questions}
     \setcounter{question}{\questionnumber}
     \addtocounter{question}{-1}
-    \question{}
+    \question[0]{}
     \begin{solution}
       42.
     \end{solution}
