fix(hw-2/q1): add missing negative sign

--- a/hw-2/mthe-474-hw-2-q-1.tex
+++ b/hw-2/mthe-474-hw-2-q-1.tex
@@ -72,13 +72,13 @@
           \end{equation*}
           Then
           \begin{align*}
-            D(p||q) &= \E_{p}\left[\log\frac{p(X)}{q(X)}\right]                                                                   \\
-                    &= \E_{p}\left[-\log\frac{q(X)}{p(X)}\right]                                                                  \\
-                    &= \E_{p}\left[-\log\frac{q(X)}{p(X)}\right]                                                                  \\
-                    &= \E_{p}[f(Y)]                                                                                               \\
-                    &\ge f(\E[Y])                                                                & &\text{by Jensen's Inequality} \\
-                    &= \log\sum_{x\in\mathcal{X}} \frac{q(x)}{\cancel{p(x)}} \cdot \cancel{p(x)}                                  \\
-                    &= \log 1                                                                                                     \\
+            D(p||q) &= \E_{p}\left[\log\frac{p(X)}{q(X)}\right]                                                                    \\
+                    &= \E_{p}\left[-\log\frac{q(X)}{p(X)}\right]                                                                   \\
+                    &= \E_{p}\left[-\log\frac{q(X)}{p(X)}\right]                                                                   \\
+                    &= \E_{p}[f(Y)]                                                                                                \\
+                    &\ge f(\E[Y])                                                                 & &\text{by Jensen's Inequality} \\
+                    &= -\log\sum_{x\in\mathcal{X}} \frac{q(x)}{\cancel{p(x)}} \cdot \cancel{p(x)}                                  \\
+                    &= -\log 1                                                                                                     \\
                     &= 0
           \end{align*}
           Therefore, divergence is non-negative.
